--- a/app/components/agenda/agenda-header/agenda-version-actions.hbs
+++ b/app/components/agenda/agenda-header/agenda-version-actions.hbs
@@ -2,8 +2,7 @@
   @skin="primary"
   @label={{t "agenda-actions"}}
   class="auk-u-hidden@print"
-  data-test-agenda-actions-show-options={{true}}
-  as |Menu|
+  data-test-agenda-actions-show-options={{true}} as |Menu|
 >
   {{#if @currentAgenda.status.isDesignAgenda}}
     <Menu.Item
@@ -16,10 +15,7 @@
       data-test-agenda-actions-approve-and-close-agenda
       {{on "click" this.openConfirmApproveAgendaAndCloseMeeting}}
     >
-      {{t
-          "approve-agenda-and-close"
-          serialnumber=@currentAgenda.serialnumber
-      }}
+      {{t "approve-agenda-and-close" serialnumber=@currentAgenda.serialnumber}}
     </Menu.Item>
     <Menu.Divider />
   {{/if}}
@@ -72,13 +68,14 @@
     </Menu.Item>
   {{/if}}
 </Auk::DropdownMenu>
-
 {{! new agenda actions with single pop-up for confirmation }}
-
 {{#if this.showConfirmForApprovingAgenda}}
   <Auk::Modal @size={{if (await (this.canBeApproved)) "small" "large"}}>
     <Auk::Modal::Header
-      @title={{t "approve-design-agenda" serialnumber=@currentAgenda.serialnumber}}
+      @title={{t
+        "approve-design-agenda"
+        serialnumber=@currentAgenda.serialnumber
+      }}
       @onClose={{this.cancelApproveAgenda}}
     />
     <Auk::Modal::Body>
@@ -93,7 +90,9 @@
             @skin="error"
             @message={{t "approve-agenda-not-ok-message"}}
           />
-          <div>{{t "approve-agenda-confirmation"}}</div>
+          <div>
+            {{t "approve-agenda-confirmation"}}
+          </div>
           {{#if (await (this.approvedAgendaitemsNotOk))}}
             <br />
             <div
@@ -113,8 +112,8 @@
               class="auk-u-mb-2"
             >
               {{t
-                  "move-agendaitem-on-approving-agenda"
-                  serialnumber=@currentAgenda.serialnumber
+                "move-agendaitem-on-approving-agenda"
+                serialnumber=@currentAgenda.serialnumber
               }}
             </div>
             <Agenda::AgendaHeader::AgendaActionPopupAgendaitems
@@ -127,11 +126,7 @@
     <Auk::Modal::Footer @onCancel={{this.cancelApproveAgenda}}>
       <Auk::Button
         data-test-agenda-actions-approve-agenda-confirm
-        @skin={{if
-                  (await this.canBeApproved)
-                  "primary"
-                  "danger-primary"
-              }}
+        @skin={{if (await this.canBeApproved) "primary" "danger-primary"}}
         @disabled={{this.reloadAgendaitemsData.isRunning}}
         {{on "click" this.approveCurrentAgenda}}
       >
@@ -140,14 +135,13 @@
     </Auk::Modal::Footer>
   </Auk::Modal>
 {{/if}}
-
 {{#if this.showConfirmForApprovingAgendaAndClosingMeeting}}
   <Auk::Modal @size={{if (await (this.canBeApproved)) "small" "large"}}>
     <Auk::Modal::Header
       @title={{t
-                 "approve-agenda-and-close"
-                 serialnumber=@currentAgenda.serialnumber
-             }}
+        "approve-agenda-and-close"
+        serialnumber=@currentAgenda.serialnumber
+      }}
       @onClose={{this.cancelApproveAgendaAndCloseMeeting}}
     />
     <Auk::Modal::Body>
@@ -162,7 +156,9 @@
             @skin="error"
             @message={{t "approve-agenda-close-meeting-not-ok-message"}}
           />
-          <div>{{t "approve-agenda-close-meeting-confirmation"}}</div>
+          <div>
+            {{t "approve-agenda-close-meeting-confirmation"}}
+          </div>
           {{#if (await (this.approvedAgendaitemsNotOk))}}
             <br />
             <div
@@ -182,8 +178,8 @@
               class="auk-u-mb-2"
             >
               {{t
-                  "delete-agendaitem-on-closing-meeting"
-                  serialnumber=@currentAgenda.serialnumber
+                "delete-agendaitem-on-closing-meeting"
+                serialnumber=@currentAgenda.serialnumber
               }}
             </div>
             <Agenda::AgendaHeader::AgendaActionPopupAgendaitems
@@ -196,11 +192,7 @@
     <Auk::Modal::Footer @onCancel={{this.cancelApproveAgendaAndCloseMeeting}}>
       <Auk::Button
         data-test-agenda-actions-approve-and-close-agenda-confirm
-        @skin={{if
-                  (await (this.canBeApproved))
-                  "primary"
-                  "danger-primary"
-              }}
+        @skin={{if (await (this.canBeApproved)) "primary" "danger-primary"}}
         @disabled={{this.reloadAgendaitemsData.isRunning}}
         {{on "click" this.approveCurrentAgendaAndCloseMeeting}}
       >
@@ -209,7 +201,6 @@
     </Auk::Modal::Footer>
   </Auk::Modal>
 {{/if}}
-
 {{#if this.showConfirmForClosingMeeting}}
   <Auk::Modal
     @size={{if (await this.latestAgenda.status.isDesignAgenda) "large" "small"}}
@@ -223,21 +214,23 @@
         <Auk::Alert
           @skin="error"
           @message={{t
-                       "agenda-design-delete-message"
-                       agenda=this.latestAgenda.agendaName
-                   }}
+            "agenda-design-delete-message"
+            agenda=this.latestAgenda.agendaName
+          }}
         />
       {{/if}}
-      <div>{{t "close-meeting-confirmation"}}</div>
+      <div>
+        {{t "close-meeting-confirmation"}}
+      </div>
     </Auk::Modal::Body>
     <Auk::Modal::Footer @onCancel={{this.cancelCloseMeeting}}>
       <Auk::Button
         data-test-agenda-actions-lock-agenda-confirm
         @skin={{if
-                  (await this.latestAgenda.status.isDesignAgenda)
-                  "danger-primary"
-                  "primary"
-              }}
+          (await this.latestAgenda.status.isDesignAgenda)
+          "danger-primary"
+          "primary"
+        }}
         {{on "click" this.closeMeeting}}
       >
         {{t "agenda-close"}}
@@ -245,7 +238,6 @@
     </Auk::Modal::Footer>
   </Auk::Modal>
 {{/if}}
-
 {{#if this.showConfirmForDeletingSelectedAgenda}}
   <Auk::Modal @size={{if (eq @reverseSortedAgendas.length 1) "large" "small"}}>
     <Auk::Modal::Header
@@ -274,7 +266,6 @@
     </Auk::Modal::Footer>
   </Auk::Modal>
 {{/if}}
-
 {{#if this.showConfirmForReopeningPreviousAgenda}}
   <Auk::Modal>
     <Auk::Modal::Header
@@ -289,10 +280,10 @@
         <Auk::Alert
           @skin="error"
           @message={{t
-                        "agenda-reopen-confirmation"
-                        designAgenda=@currentAgenda.agendaName
-                        approvedAgenda=this.lastApprovedAgenda.agendaName
-                    }}
+            "agenda-reopen-confirmation"
+            designAgenda=@currentAgenda.agendaName
+            approvedAgenda=this.lastApprovedAgenda.agendaName
+          }}
         />
         {{#if this.loadPiecesToDelete.isRunning}}
           <div class="auk-o-flex auk-o-flex--center auk-u-mt-4">
@@ -306,49 +297,48 @@
           />
           <Auk::List class="auk-list auk-list--bordered">
             {{#each this.piecesToDeleteReopenPreviousAgenda as |piece|}}
-                <div class="vlc-document-card vlc-document-card--borderless">
-                  <div class="vlc-document-card__content">
-                    <Auk::Toolbar @auto={{true}} as |Toolbar|>
-                      <Toolbar.Group @position="left" as |Group|>
-                        <Group.Item class="auk-u-maximize-width">
-                          <div
-                            class="auk-o-flex auk-o-flex--vertical-center auk-o-flex--spaced"
-                          ></div>
-                          <LinkTo
-                            @route="document"
-                            @model={{piece.id}}
-                            target="_blank"
-                            class="auk-h4"
+              <div class="vlc-document-card vlc-document-card--borderless">
+                <div class="vlc-document-card__content">
+                  <Auk::Toolbar @auto={{true}} as |Toolbar|>
+                    <Toolbar.Group @position="left" as |Group|>
+                      <Group.Item class="auk-u-maximize-width">
+                        <div
+                          class="auk-o-flex auk-o-flex--vertical-center auk-o-flex--spaced"
+                        ></div>
+                        <LinkTo
+                          @route="document"
+                          @model={{piece.id}}
+                          target="_blank"
+                          class="auk-h4"
+                        >
+                          {{piece.name}}
+                        </LinkTo>
+                        <div class="vlc-document-card-content__meta">
+                          {{t "uploaded-at"}}
+                          {{moment-format piece.created}}
+                          {{t "at"}}
+                          {{moment-format piece.created "HH:mm"}}
+                        </div>
+                      </Group.Item>
+                    </Toolbar.Group>
+                    <Toolbar.Group @position="right" as |Group|>
+                      <Group.Item class="auk-u-maximize-width">
+                        {{#if piece.file}}
+                          <Auk::Button
+                            @skin="borderless"
+                            @layout="icon-only"
+                            @icon="book"
+                            class="auk-u-ml-2"
+                            {{on "click" (fn this.showPieceViewer piece)}}
                           >
-                            {{! prettier-ignore }}
-                            {{piece.name}}{{#if piece.file}}.{{piece.file.extension}}{{/if}}
-                          </LinkTo>
-                          <div class="vlc-document-card-content__meta">
-                            {{t "uploaded-at"}}
-                            {{moment-format piece.created}}
-                            {{t "at"}}
-                            {{moment-format piece.created "HH:mm"}}
-                          </div>
-                        </Group.Item>
-                      </Toolbar.Group>
-                      <Toolbar.Group @position="right" as |Group|>
-                        <Group.Item class="auk-u-maximize-width">
-                          {{#if piece.file}}
-                            <Auk::Button
-                              @skin="borderless"
-                              @layout="icon-only"
-                              @icon="book"
-                              class="auk-u-ml-2"
-                              {{on "click" (fn this.showPieceViewer piece)}}
-                            >
-                              {{t "view-document-details"}}
-                            </Auk::Button>
-                          {{/if}}
-                        </Group.Item>
-                      </Toolbar.Group>
-                    </Auk::Toolbar>
-                  </div>
+                            {{t "view-document-details"}}
+                          </Auk::Button>
+                        {{/if}}
+                      </Group.Item>
+                    </Toolbar.Group>
+                  </Auk::Toolbar>
                 </div>
+              </div>
             {{/each}}
           </Auk::List>
         {{/if}}
