--- a/app/components/documents/document-preview/document-preview-modal.hbs
+++ b/app/components/documents/document-preview/document-preview-modal.hbs
@@ -27,6 +27,7 @@
           @transitionBack={{@onClose}}
           @markForSignature={{@markForSignature}}
           @unmarkForSignature={{@unmarkForSignature}}
+          @didDeletePiece={{@didDeletePiece}}
         />
       </div>
     </div>
