--- a/app/components/documents/document-preview/document-preview-sidebar.hbs
+++ b/app/components/documents/document-preview/document-preview-sidebar.hbs
@@ -73,6 +73,7 @@
           <Documents::DocumentPreview::DetailsTab
             @piece={{@piece}}
             @documentContainer={{this.documentContainer}}
+            @didDeletePiece={{@didDeletePiece}}
           />
           {{! SIGNATURES }}
         {{else if (eq this.activeTab "signatures")}}
