--- a/app/templates/document.hbs
+++ b/app/templates/document.hbs
@@ -1,6 +1,11 @@
-<Documents::DocumentPreview::DocumentPreviewModal
-  @piece={{this.model}}
-  @onClose={{this.transitionBack}}
-  @markForSignature={{this.markForSignature}}
-  @unmarkForSignature={{this.unmarkForSignature}}
-/>
+{{#if this.loadWhereIsPieceFrom.isRunning}}
+  <Auk::Loader />
+{{else}}
+  <Documents::DocumentPreview::DocumentPreviewModal
+    @piece={{this.model}}
+    @onClose={{this.transitionBack}}
+    @markForSignature={{this.markForSignature}}
+    @unmarkForSignature={{this.unmarkForSignature}}
+    @didDeletePiece={{this.didDeletePiece}}
+  />
+{{/if}}
