--- a/app/components/documents/document-preview/details-tab.hbs
+++ b/app/components/documents/document-preview/details-tab.hbs
@@ -2,5 +2,6 @@
   <Documents::DocumentDetailsPanel
     @piece={{@piece}}
     @documentContainer={{@documentContainer}}
+    @didDeletePiece={{@didDeletePiece}}
   />
 </div>
