--- a/app/components/agenda/printable-agenda/list-section/item-group/item/document-list.hbs
+++ b/app/components/agenda/printable-agenda/list-section/item-group/item/document-list.hbs
@@ -5,6 +5,7 @@
         <Agenda::PrintableAgenda::ListSection::ItemGroup::Item::Document
           @piece={{piece}}
           @accessLevel={{await piece.accessLevel}}
+          @isDraftAccessLevelArgs={{@isDraftAccessLevelArgs}}
         />
       </span>
     </li>
