update users overview

--- a/app/styles/prototype/_agenda.scss
+++ b/app/styles/prototype/_agenda.scss
@@ -400,6 +400,10 @@ a.vlc-agenda-detail-sidebar__sub-item--active {
   padding: 0.1rem 0.6rem 0 !important;
 }
 
+.au-c-pill--small {
+  padding: .1rem 0.6rem .13rem !important;
+}
+
 .au-c-pill--ongoing {
   color: var(--vl-picton-120) !important;
 }
