--- a/app/styles/au/_au-components.scss
+++ b/app/styles/au/_au-components.scss
@@ -16,10 +16,10 @@
 @import "ember-appuniversum/c-card";
 @import "ember-appuniversum/c-content";
 // @import "ember-appuniversum/c-content-header";
-// @import "ember-appuniversum/c-control";
+@import "ember-appuniversum/c-control";
 // @import "ember-appuniversum/c-data-table";
 // @import "ember-appuniversum/c-dropdown";
-// @import "ember-appuniversum/c-fieldset";
+@import "ember-appuniversum/c-fieldset";
 // @import "ember-appuniversum/c-file-upload";
 // @import "ember-appuniversum/c-form";
 // @import "ember-appuniversum/c-form-row";
