refactor: use isDraftAccessLevel in DocumentBadge

--- a/app/components/agenda/agenda-overview/agenda-overview-item.hbs
+++ b/app/components/agenda/agenda-overview/agenda-overview-item.hbs
@@ -109,6 +109,11 @@
           <Documents::DocumentBadgeList
             @pieces={{this.limitedAgendaitemDocuments}}
             @highlightedPieces={{this.newAgendaitemDocuments}}
+            @isDraftAccessLevelArgs={{hash
+              meeting=@meeting
+              agenda=@currentAgenda
+              agendaitem=@agendaitem
+            }}
           />
         </div>
         {{#if this.enableShowMore}}
