--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -62,7 +62,15 @@
               <div class="auk-o-flex auk-o-flex--vertical-center">
                 <AccessLevelPill
                   @accessLevel={{this.accessLevel}}
-                  @isDraft={{not (await (is-access-level-in-effect this.accessLevel this.piece))}}
+                  @isDraft={{await
+                    (is-draft-access-level
+                      meeting=@isDraftAccessLevelArgs.meeting
+                      agenda=@isDraftAccessLevelArgs.agenda
+                      agendaitem=@isDraftAccessLevelArgs.agendaitem
+                      piece=this.piece
+                      accessLevel=this.accessLevel
+                    )
+                  }}
                   @isEditable={{true}}
                   @onChangeAccessLevel={{this.changeAccessLevel}}
                   @onConfirmChangeAccessLevel={{this.saveAccessLevel}}
