--- a/app/styles/au/_au-components.scss
+++ b/app/styles/au/_au-components.scss
@@ -46,7 +46,7 @@
 // @import "ember-appuniversum/c-textarea";
 // @import "ember-appuniversum/c-timepicker";
 @import "ember-appuniversum/c-toolbar";
-// @import "ember-appuniversum/c-toggle-switch";
+@import "ember-appuniversum/c-toggle-switch";
 
 
 // PLUGINS
